--- a/views/admin/auth.html
+++ b/views/admin/auth.html
@@ -2,9 +2,38 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Admin-Редактирование отзывов</title>
+	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	<script src="../socket.io/socket.io.js"></script>
+	<script src="../_js/socket.io-file-client.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link rel="stylesheet" href="../_css/bulma.css">
 </head>
 <body>
-	
-</body>
-</html>
+<section class="hero is-primary">
+  <div class="hero-body">
+    <div class="container">
+     <form action="doLogin" method="POST">
+					<div class="field">
+					<div class="control">
+						<input type="text" class="input" name="username" placeholder="Юзернэйм">
+					</div>
+				</div>
+				<div class="field">
+					<div class="control">
+						<input type="text" class="input" name="password" placeholder="Пароль">
+					</div>
+				</div>
+				<input class="button" type="submit">
+		</form>
+      </h2>
+    </div>
+  </div>
+</section>
+
+
+
+			
+	</body>
+	</html>
